--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,7 +8,7 @@
         "build": "tsc && vite build",
         "serve": "vite preview",
         "test": "vitest",
-        "lint": "eslint --ext .ts,.tsx src",
+        "lint": "eslint \"src/**/*.{ts,tsx}\"",
         "typecheck": "tsc --noEmit",
         "update-data": "node -r esbuild-register scripts/update-data.ts",
         "publish-tauri-update": "tsx scripts/publish-tauri-update.ts",
@@ -37,7 +37,8 @@
         "solid-popper": "^0.3.0",
         "solid-toast": "^0.5.0",
         "solid-transition-group": "^0.2.3",
-        "tailwind-merge": "^2.0.0"
+        "tailwind-merge": "^2.0.0",
+        "papaparse": "^5.4.1"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^1.5.6",
@@ -56,7 +57,9 @@
         "typescript": "^5.3.2",
         "vite": "^5.0.4",
         "vite-plugin-solid": "^2.7.2",
-        "vitest": "^0.34.6"
+        "vitest": "^0.34.6",
+        "vite-plugin-static-copy": "^0.17.0",
+        "@types/papaparse": "^5.3.7"
     },
     "packageManager": "pnpm@9.2.0"
 }
